Updated how review submission works - users can change their review but cannot submit multiple reviews for the same title. Using promise and callback to ensure data is set first before attempting to check user review status. Added green check mark and spinner for the feedback modal. Adding back in the custom scrollbar.

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -112,4 +112,39 @@ body {
   float: left;
 }
 
+.centerImg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+/*
+  Idea from https://scriptgenerator.net/html-css-custom-scrollbar-code-generator/
+ */
+.scrollbar::-webkit-scrollbar {
+  width: 10px;
+  background-color: #d42c08;
+}
+.scrollbar::-webkit-scrollbar:horizontal {
+  height: 14px;
+}
+.scrollbar::-webkit-scrollbar-track {
+  border: 1px #787878 solid;
+  border-radius: 10px;
+  box-shadow: 0 0 100px #eeeeee inset;
+}
+.scrollbar::-webkit-scrollbar-thumb {
+  background-color: #35aec3;
+  border: 1px solid #000000;
+  border-radius: 16px;
+}
+.scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: #58a1d3;
+  border: 1px solid #333333;
+}
+.scrollbar::-webkit-scrollbar-thumb:active {
+  background-color: #337996;
+  border: 1px solid #333333;
+}
+
 /*# sourceMappingURL=style.css.map */
